syntax = "proto3";

package order;

option go_package = "./proto";

service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (Order);
}

message CreateOrderRequest{
    string customer_id = 1;
    repeated OrderItem items = 2;
    string shipping_address = 3;
}

message OrderItem{
    string product_id = 1;
    int32 quantity = 2;
}

message CreateOrderResponse{
    string order_id = 1;
    string status = 2;
}

message GetOrderRequest{
    string order_id = 1;
}

message Order{
    string id = 1;
    string customer_id = 2;
    repeated OrderItem items = 3;
    string status = 4;
    string shipping_address = 5;
    double total_amount = 6;
    int64 created_at = 7;
}